Fixed the dumb aspect ratio problems on Firefox

--- a/style/src/header.css
+++ b/style/src/header.css
@@ -124,6 +124,8 @@
 	top: 5px;
 	right: 5px;
 	
+	aspect-ratio: 1;
+	
 	padding: 5px;
 	border-radius: 5px;
 	
